--- a/js-bindings/package.json
+++ b/js-bindings/package.json
@@ -42,6 +42,7 @@
     "karma": "^4.0.1",
     "karma-firefox-launcher": "^1.1.0",
     "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.5",
     "karma-webpack": "^3.0.5",
     "mocha": "6.0.2",
     "typescript": "^3.6.2",
