--- a/js-bindings/package.json
+++ b/js-bindings/package.json
@@ -1,13 +1,15 @@
 {
   "name": "bls-signatures",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "The most advanced BLS library for JavaScript",
   "main": "blsjs.js",
+  "browser": "dist/bundle.js",
   "types": "blsjs.d.ts",
   "files": [
     "blsjs.js",
     "blsjs.wasm",
-    "blsjs.d.ts"
+    "blsjs.d.ts",
+    "dist/bundle.js"
   ],
   "directories": {
     "test": "tests"
@@ -16,7 +18,8 @@
     "test": "npm run test:node && npm run test:browser",
     "test:typings": "tsc ./tests/typings.spec.ts",
     "test:node": "npm run test:typings && mocha ./tests/*.spec.js",
-    "test:browser": "npm run test:typings && karma start ./tests/karma.conf.js --single-run"
+    "test:browser": "npm run test:typings && karma start ./tests/karma.conf.js --single-run",
+    "webpack": "webpack --config= ./webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -42,9 +45,12 @@
     "karma": "^4.0.1",
     "karma-firefox-launcher": "^1.1.0",
     "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.5",
     "karma-webpack": "^3.0.5",
     "mocha": "6.0.2",
     "typescript": "^3.6.2",
-    "webpack": "^4.29.6"
+    "wasm-loader": "^1.3.0",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.12"
   }
 }
