--- a/js-bindings/package.json
+++ b/js-bindings/package.json
@@ -2,14 +2,15 @@
   "name": "bls-signatures",
   "version": "0.2.2",
   "description": "The most advanced BLS library for JavaScript",
-  "main": "blsjs.js",
+  "main": "dist/bundle.js",
   "browser": "dist/bundle.js",
   "types": "blsjs.d.ts",
   "files": [
     "blsjs.js",
     "blsjs.wasm",
     "blsjs.d.ts",
-    "dist/bundle.js"
+    "dist/bundle.js",
+    "dist/bls.umd.js"
   ],
   "directories": {
     "test": "tests"
@@ -19,7 +20,8 @@
     "test:typings": "tsc ./tests/typings.spec.ts",
     "test:node": "npm run test:typings && mocha ./tests/*.spec.js",
     "test:browser": "npm run test:typings && karma start ./tests/karma.conf.js --single-run",
-    "webpack": "webpack --config= ./webpack.config.js"
+    "webpack": "webpack --config=./webpack.config.js",
+    "rollup": "rollup -c"
   },
   "repository": {
     "type": "git",
@@ -42,6 +44,7 @@
   "devDependencies": {
     "@types/mocha": "^5.2.6",
     "@types/node": "^11.11.0",
+    "file-loader": "^6.1.0",
     "karma": "^4.0.1",
     "karma-firefox-launcher": "^1.1.0",
     "karma-mocha": "^1.3.0",
@@ -50,7 +53,7 @@
     "mocha": "6.0.2",
     "typescript": "^3.6.2",
     "wasm-loader": "^1.3.0",
-    "webpack": "^4.29.6",
+    "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12"
   }
 }
