--- a/js-bindings/package.json
+++ b/js-bindings/package.json
@@ -1,21 +1,19 @@
 {
   "name": "bls-signatures",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "The most advanced BLS library for JavaScript",
-  "main": "dist/bundle.js",
-  "browser": "dist/bundle.js",
+  "main": "blsjs.js",
   "types": "blsjs.d.ts",
   "files": [
     "blsjs.js",
     "blsjs.wasm",
-    "blsjs.d.ts",
-    "dist/bundle.js",
-    "dist/bls.umd.js"
+    "blsjs.d.ts"
   ],
   "directories": {
     "test": "tests"
   },
   "scripts": {
+    "build:web": "node bundle_wasm_for_web.js",
     "test": "npm run test:node && npm run test:browser",
     "test:typings": "tsc ./tests/typings.spec.ts",
     "test:node": "npm run test:typings && mocha ./tests/*.spec.js",
@@ -44,7 +42,6 @@
   "devDependencies": {
     "@types/mocha": "^5.2.6",
     "@types/node": "^11.11.0",
-    "file-loader": "^6.1.0",
     "karma": "^4.0.1",
     "karma-firefox-launcher": "^1.1.0",
     "karma-mocha": "^1.3.0",
@@ -52,9 +49,6 @@
     "karma-webpack": "^3.0.5",
     "mocha": "6.0.2",
     "typescript": "^3.6.2",
-    "wasm-loader": "^1.3.0",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12",
-    "buffer-loader": "^0.1.0"
+    "webpack": "^4.44.2"
   }
 }
